ConfigParser/CompileError.txt
src/ConfigParser.cpp: In function ‘int GetConfig(char*, void*)’:
src/ConfigParser.cpp:307:9: warning: unused variable ‘lnRetVal’ [-Wunused-variable]
     int lnRetVal = 0;
         ^~~~~~~~
src/ConfigParser.cpp:211:1: error: stray ‘`’ in program
 `
 ^
src/ConfigParser.cpp: In function ‘int GetConfig(char*, void*)’:
src/ConfigParser.cpp:309:9: warning: unused variable ‘lnRetVal’ [-Wunused-variable]
     int lnRetVal = 0;
         ^~~~~~~~
src/ConfigParser.cpp: In function ‘int GetConfig(char*, void*)’:
src/ConfigParser.cpp:309:9: warning: unused variable ‘lnRetVal’ [-Wunused-variable]
     int lnRetVal = 0;
         ^~~~~~~~
